# lando

./: .dockerignore  .gitignore  .moz-phab-config  .npmrc  .prettierignore  .prettierrc.json  CLAUDE.md  CODEOWNERS  Dockerfile  Makefile  README.md  compose.yaml  generate_version_file.py  jest.config.js  jest.setup.js  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  ruff.toml  tsconfig.app.json  tsconfig.node.json  uwsgi.ini  vite.config.ts  vitest.config.js  vitest.setup.js
.github/: dependabot.yml
.github/workflows/: build.yml  deploy.yml  pr-handler.yml
frontend/: formatting.test.ts
frontend/src/: main.ts  trainGuidance.test.ts  trainGuidance.ts
frontend/src/components/: TrainSelector.test.ts  TrainSelector.vue
frontend/src/composables/: useTargetSelectionMethod.test.ts  useTargetSelectionMethod.ts  useUpliftRepositories.test.ts  useUpliftRepositories.ts
landoui/: app.py
nginx/: Dockerfile  nginx.conf
src/lando/: Dockerfile  __init__.py  conftest.py  environments.py  jinja.py  jinja2.py  manage.py  middleware.py  remote_settings.py  requirements.txt  ruff.toml  settings.py  test_settings.py  urls.py  wsgi.py
src/lando/api/: apps.py  uplift_api.py  views.py
src/lando/api/legacy/: app.py  auth.py  bmo.py  cache.py  celery.py  cli.py  commit_message.py  decorators.py  dockerflow.py  email.py  hg.py  hgexports.py  hooks.py  logging.py  notifications.py  phabricator.py  phabricator_patch.py  projects.py  redis.py  repos.py  reviews.py  revisions.py  sentry.py  smtp.py  stacks.py  storage.py  systems.py  tasks.py  transactions.py  transplants.py  treestatus.py  ui.py  uplift.py  users.py  validation.py  version.py  wsgi.py
src/lando/api/tests/: conftest.py  fake_formatter.py  mocks.py  test_auth.py  test_commit_message.py  test_decorators.py  test_diff_warnings.py  test_dockerflow.py  test_git.py  test_health.py  test_hg.py  test_hgexports.py  test_hooks.py  test_landing_job.py  test_landings.py  test_models.py  test_notifications.py  test_phabricator.py  test_phabricator_client.py  test_phabricator_patch.py  test_py3_codequality.py  test_redis.py  test_reviews.py  test_revisions.py  test_stacks.py  test_tasks.py  test_transactions.py  test_transplants.py  test_treestatus.py  test_try.py  test_uplift.py  test_uplift_api.py  test_uplift_email.py  test_validation.py  test_views.py  test_worker.py  utils.py
src/lando/api/views/: __init__.py  pull_requests.py
src/lando/dockerflow/: apps.py  decorators.py  urls.py  views.py
src/lando/dockerflow/tests/: conftest.py  test_dockerflow.py
src/lando/headless_api/: admin.py  api.py
src/lando/headless_api/migrations/: 0001_initial.py  0002_automationjob_error.py  0003_automationjob_relbranch_commit_sha_and_more.py  0003_automationjob_relbranch_specifier.py  0004_alter_automationaction_action_type.py  0005_alter_automationaction_action_type.py  0006_alter_automationjob_status.py  0007_alter_automationaction_action_type.py  0007_alter_automationjob_status.py  0008_alter_automationjob_requester_email.py  0009_alter_automationaction_action_type.py
src/lando/headless_api/models/: automation_job.py  tokens.py
src/lando/headless_api/tests/: test_automation_api.py
src/lando/lando/: asgi.py  settings.py  urls.py
src/lando/main/: admin.py  api.py  apps.py  auth.py  logging.py  models.py  sentry.py  support.py  tests.py  util.py
src/lando/pulse/: apps.py  pulse.py
src/lando/pushlog/: admin.py  apps.py  pushlog.py
src/lando/static_src/: TEMPORARY_FILE
src/lando/tests/: conftest.py  test_formatting.py  test_middlewares.py  test_migrations.py  test_version.py
src/lando/treestatus/: apps.py  forms.py  models.py  treestatus_ui.py  views.py
src/lando/try_api/: admin.py  api.py  apps.py  worker.py
src/lando/ui/: apps.py  jobs.py  pull_requests.py  views.py
src/lando/utils/: __init__.py  apps.py  auth.py  cache.py  celery.py  config.py  const.py  crypto.py  exceptions.py  github.py  github_checks.py  github_warnings.py  landing_checks.py  ninja_auth.py  phabricator.py  strings.py  tasks.py  treestatus.py  views.py
(+354 files in other folders)
