[project]
authors = [
    {name = "Mozilla", email = "conduit-team@mozilla.com"},
]
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
description =  "Unified Lando Project"
dependencies = [
    "celery",
    "datadog",  # statsd metrics in celery.py
    "django ~= 5.0",
    "django_compressor",
    "django-storages[google]",
    "python-hglib ~= 2.6",
    "mots",
    "mozilla_django_oidc",
    "networkx",
    "psycopg2-binary",
    "redis",
    "rs_parsepatch",
    "sentry-sdk",
]
name = "lando"
requires-python = ">=3.10"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
]
tests = [
  "pytest",
  "pytest-django",
  "requests-mock",
]


[project.scripts]
lando = "lando.manage:main"

[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/lando/version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "lando.test_settings"

testpaths = [
    "src/lando/api",
    "src/lando/dockerflow",
    "src/lando/main/tests",
    "src/lando/tests",
    "src/lando/ui/tests",
]
